// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomSheetContent should match snapshot when isDelegate='false' 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          [
            {
              "zIndex": 1,
            },
            false,
          ]
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                [
                  {
                    "flex": 1,
                    "shadowOffset": {
                      "height": 0.5,
                      "width": 0,
                    },
                    "shadowOpacity": 0.85,
                    "shadowRadius": 0,
                  },
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderBottomColor": "rgb(216, 216, 216)",
                    "shadowColor": "rgb(216, 216, 216)",
                  },
                  [
                    {},
                    false,
                  ],
                ]
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              [
                {
                  "height": 44,
                  "maxHeight": undefined,
                  "minHeight": undefined,
                  "opacity": undefined,
                  "transform": undefined,
                },
              ]
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    [
                      {
                        "fontSize": 17,
                        "fontWeight": "600",
                      },
                      {
                        "color": "rgb(28, 28, 30)",
                      },
                      undefined,
                    ]
                  }
                >
                  PN_ROUTES_MESSAGE_DETAILS
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "zIndex": undefined,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                [
                  {
                    "flex": 1,
                  },
                  undefined,
                  null,
                ]
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "display": "flex",
                              "flexDirection": "row",
                              "gap": 24,
                            }
                          }
                        >
                          <RNSVGSvgView
                            accessibilityElementsHidden={true}
                            accessibilityLabel=""
                            accessible={false}
                            align="xMidYMid"
                            bbHeight={36}
                            bbWidth={36}
                            color="#BBC2D6"
                            focusable={false}
                            height={36}
                            importantForAccessibility="no-hide-descendants"
                            meetOrSlice={0}
                            minX={0}
                            minY={0}
                            style={
                              [
                                {
                                  "backgroundColor": "transparent",
                                  "borderWidth": 0,
                                },
                                {
                                  "flex": 0,
                                  "height": 36,
                                  "width": 36,
                                },
                              ]
                            }
                            vbHeight={24}
                            vbWidth={24}
                            width={36}
                          >
                            <RNSVGGroup
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            >
                              <RNSVGPath
                                clipRule={0}
                                d="M0 3a3 3 0 0 1 3-3h5a3 3 0 0 1 3 3v5a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3V3Zm3-1a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H3ZM0 16a3 3 0 0 1 3-3h5a3 3 0 0 1 3 3v5a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3v-5Zm3-1a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1v-5a1 1 0 0 0-1-1H3ZM16 0a3 3 0 0 0-3 3v5a3 3 0 0 0 3 3h5a3 3 0 0 0 3-3V3a3 3 0 0 0-3-3h-5Zm-1 3a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1h-5a1 1 0 0 1-1-1V3Zm-1.5 13.681a.5.5 0 0 1-.5-.5V13.5a.5.5 0 0 1 .5-.5h2.637a.5.5 0 0 1 .5.5v3.181H13.5Zm6.819 0h-3.682v3.637H13.5a.5.5 0 0 0-.5.5V23.5a.5.5 0 0 0 .5.5h3.137v-3.681h3.681V24H23.5a.5.5 0 0 0 .5-.5v-3.181h-3.681v-3.637Zm0 0V13.5a.5.5 0 0 1 .5-.5H23.5a.5.5 0 0 1 .5.5v3.181h-3.681ZM5 4a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1h1a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1H5ZM4 18a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-1ZM18 4a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1h1a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-1Z"
                                fill={
                                  {
                                    "type": 2,
                                  }
                                }
                                fillRule={0}
                                propList={
                                  [
                                    "fill",
                                    "fillRule",
                                  ]
                                }
                              />
                            </RNSVGGroup>
                          </RNSVGSvgView>
                          <View
                            style={
                              {
                                "display": "flex",
                                "flexDirection": "column",
                                "flexShrink": 1,
                                "gap": 6,
                              }
                            }
                          >
                            <Text
                              allowFontScaling={true}
                              dynamicTypeRamp="body"
                              maxFontSizeMultiplier={1.5}
                              style={
                                [
                                  {},
                                  {
                                    "color": "#555C70",
                                    "fontFamily": "Titillio",
                                    "fontSize": 16,
                                    "fontStyle": "normal",
                                    "fontWeight": "400",
                                    "lineHeight": 24,
                                  },
                                ]
                              }
                              testID="infoScreenBody"
                            >
                              Conserva il codice QR, ti servirà per rileggere la notifica in app
                            </Text>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "height": 24,
                            }
                          }
                        />
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "display": "flex",
                              "flexDirection": "row",
                              "gap": 24,
                            }
                          }
                        >
                          <RNSVGSvgView
                            accessibilityElementsHidden={true}
                            accessibilityLabel=""
                            accessible={false}
                            align="xMidYMid"
                            bbHeight={36}
                            bbWidth={36}
                            color="#BBC2D6"
                            focusable={false}
                            height={36}
                            importantForAccessibility="no-hide-descendants"
                            meetOrSlice={0}
                            minX={0}
                            minY={0}
                            style={
                              [
                                {
                                  "backgroundColor": "transparent",
                                  "borderWidth": 0,
                                },
                                {
                                  "flex": 0,
                                  "height": 36,
                                  "width": 36,
                                },
                              ]
                            }
                            vbHeight={24}
                            vbWidth={24}
                            width={36}
                          >
                            <RNSVGGroup
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            >
                              <RNSVGPath
                                clipRule={0}
                                d="M0 5c0-2.76142 2.23858-5 5-5h3c.55229 0 1 .44771 1 1 0 .55228-.44771 1-1 1H5C3.34315 2 2 3.34315 2 5v3c0 .55229-.44772 1-1 1-.55229 0-1-.44771-1-1V5Zm19-5c2.7614 0 5 2.23858 5 5v3c0 .55229-.4477 1-1 1s-1-.44771-1-1V5c0-1.65685-1.3431-3-3-3h-3c-.5523 0-1-.44772-1-1 0-.55229.4477-1 1-1h3Zm0 24c2.7614 0 5-2.2386 5-5v-3c0-.5523-.4477-1-1-1s-1 .4477-1 1v3c0 1.6569-1.3431 3-3 3h-3c-.5523 0-1 .4477-1 1s.4477 1 1 1h3ZM5 24c-2.76142 0-5-2.2386-5-5v-3c0-.5523.44771-1 1-1 .55228 0 1 .4477 1 1v3c0 1.6569 1.34315 3 3 3h3c.55229 0 1 .4477 1 1s-.44771 1-1 1H5Zm-1-9c0-1.1046.89543-2 2-2h3c1.1046 0 2 .8954 2 2v3c0 1.1046-.8954 2-2 2H6c-1.10457 0-2-.8954-2-2v-3Zm2.25 0c-.13807 0-.25.1119-.25.25v2.5c0 .1381.11193.25.25.25h2.5c.13807 0 .25-.1119.25-.25v-2.5c0-.1381-.11193-.25-.25-.25h-2.5ZM6 4c-1.10457 0-2 .89543-2 2v3c0 1.1046.89543 2 2 2h3c1.1046 0 2-.8954 2-2V6c0-1.10457-.8954-2-2-2H6Zm2.75 2c.13807 0 .25.11193.25.25v2.5c0 .13807-.11193.25-.25.25h-2.5C6.11193 9 6 8.88807 6 8.75v-2.5c0-.13807.11193-.25.25-.25h2.5ZM13 6c0-1.10457.8954-2 2-2h3c1.1046 0 2 .89543 2 2v3c0 1.1046-.8954 2-2 2h-3c-1.1046 0-2-.8954-2-2V6Zm2.25 0c-.1381 0-.25.11193-.25.25v2.5c0 .13807.1119.25.25.25h2.5c.1381 0 .25-.11193.25-.25v-2.5c0-.13807-.1119-.25-.25-.25h-2.5ZM20 15c0-.5523-.4477-1-1-1s-1 .4477-1 1v2.75c0 .1381-.1119.25-.25.25H15c-.5523 0-1 .4477-1 1s.4477 1 1 1h3c1.1046 0 2-.8954 2-2v-3Zm-5-1c.5523 0 1 .4477 1 1s-.4477 1-1 1-1-.4477-1-1 .4477-1 1-1Z"
                                fill={
                                  {
                                    "type": 2,
                                  }
                                }
                                fillRule={0}
                                propList={
                                  [
                                    "fill",
                                    "fillRule",
                                  ]
                                }
                              />
                            </RNSVGGroup>
                          </RNSVGSvgView>
                          <View
                            style={
                              {
                                "display": "flex",
                                "flexDirection": "column",
                                "flexShrink": 1,
                                "gap": 6,
                              }
                            }
                          >
                            <Text
                              allowFontScaling={true}
                              dynamicTypeRamp="body"
                              maxFontSizeMultiplier={1.5}
                              style={
                                [
                                  {},
                                  {
                                    "color": "#555C70",
                                    "fontFamily": "Titillio",
                                    "fontSize": 16,
                                    "fontStyle": "normal",
                                    "fontWeight": "400",
                                    "lineHeight": 24,
                                  },
                                ]
                              }
                              testID="infoScreenBody"
                            >
                              Puoi inquadrarlo oppure caricare una sua foto su IO
                            </Text>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "height": 24,
                            }
                          }
                        />
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "display": "flex",
                              "flexDirection": "row",
                              "gap": 24,
                            }
                          }
                        >
                          <RNSVGSvgView
                            accessibilityElementsHidden={true}
                            accessibilityLabel=""
                            accessible={false}
                            align="xMidYMid"
                            bbHeight={36}
                            bbWidth={36}
                            color="#BBC2D6"
                            focusable={false}
                            height={36}
                            importantForAccessibility="no-hide-descendants"
                            meetOrSlice={0}
                            minX={0}
                            minY={0}
                            style={
                              [
                                {
                                  "backgroundColor": "transparent",
                                  "borderWidth": 0,
                                },
                                {
                                  "flex": 0,
                                  "height": 36,
                                  "width": 36,
                                },
                              ]
                            }
                            vbHeight={24}
                            vbWidth={24}
                            width={36}
                          >
                            <RNSVGGroup
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            >
                              <RNSVGPath
                                d="M12 0a12 12 0 1 0 12 12A12.013 12.013 0 0 0 12 0Zm8.647 7h-3.221a19.674 19.674 0 0 0-2.821-4.644A10.031 10.031 0 0 1 20.647 7ZM16.5 12a10.21 10.21 0 0 1-.476 3H7.976a10.211 10.211 0 0 1-.476-3 10.21 10.21 0 0 1 .476-3h8.048c.307.97.468 1.982.476 3Zm-7.722 5h6.444A19.615 19.615 0 0 1 12 21.588 19.572 19.572 0 0 1 8.778 17Zm0-10A19.615 19.615 0 0 1 12 2.412 19.57 19.57 0 0 1 15.222 7H8.778ZM9.4 2.356A19.676 19.676 0 0 0 6.574 7H3.353A10.03 10.03 0 0 1 9.4 2.356ZM2.461 9H5.9c-.26.98-.394 1.987-.4 3 .006 1.013.14 2.02.4 3H2.461a9.992 9.992 0 0 1 0-6Zm.892 8h3.221A19.676 19.676 0 0 0 9.4 21.644 10.031 10.031 0 0 1 3.353 17Zm11.252 4.644c1.15-1.41 2.1-2.973 2.821-4.644h3.221a10.031 10.031 0 0 1-6.042 4.644ZM21.539 15H18.1c.26-.98.394-1.987.4-3a12.02 12.02 0 0 0-.4-3h3.437a9.991 9.991 0 0 1 0 6h.002Z"
                                fill={
                                  {
                                    "type": 2,
                                  }
                                }
                                propList={
                                  [
                                    "fill",
                                  ]
                                }
                              />
                            </RNSVGGroup>
                          </RNSVGSvgView>
                          <View
                            style={
                              {
                                "display": "flex",
                                "flexDirection": "column",
                                "flexShrink": 1,
                                "gap": 6,
                              }
                            }
                          >
                            <Text
                              allowFontScaling={true}
                              dynamicTypeRamp="footnote"
                              maxFontSizeMultiplier={1.5}
                              style={
                                [
                                  {},
                                  {
                                    "color": "#555C70",
                                    "fontFamily": "Titillio",
                                    "fontSize": 14,
                                    "fontStyle": "normal",
                                    "fontWeight": "400",
                                    "lineHeight": 21,
                                  },
                                ]
                              }
                              testID="body_nomandate"
                            >
                              Tutte le tue notifiche sono disponibili sul sito di SEND - Notifiche Digitali
                            </Text>
                            <View
                              accessibilityRole="link"
                              accessibilityState={
                                {
                                  "busy": undefined,
                                  "checked": undefined,
                                  "disabled": undefined,
                                  "expanded": undefined,
                                  "selected": undefined,
                                }
                              }
                              accessibilityValue={
                                {
                                  "max": undefined,
                                  "min": undefined,
                                  "now": undefined,
                                  "text": undefined,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                            >
                              <Text
                                accessibilityRole="link"
                                allowFontScaling={true}
                                dynamicTypeRamp="footnote"
                                maxFontSizeMultiplier={1.5}
                                style={
                                  [
                                    {
                                      "textDecorationLine": "underline",
                                    },
                                    {
                                      "color": "#0B3EE3",
                                      "fontFamily": "Titillio",
                                      "fontSize": 14,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": 21,
                                    },
                                  ]
                                }
                                testID="link"
                              >
                                Vai sul sito di SEND
                              </Text>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "height": 24,
                            }
                          }
                        />
                        <View
                          accessibilityLabel="Torna alla notifica"
                          accessibilityRole="button"
                          accessibilityState={
                            {
                              "busy": false,
                              "checked": undefined,
                              "disabled": false,
                              "expanded": undefined,
                              "selected": undefined,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            {
                              "alignSelf": "auto",
                              "flexShrink": 1,
                            }
                          }
                          testID="primary_button"
                        >
                          <View
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "borderCurve": "continuous",
                                  "elevation": 0,
                                  "flexDirection": "row",
                                  "justifyContent": "center",
                                  "overflow": "hidden",
                                  "textAlignVertical": "center",
                                },
                                false,
                                {
                                  "backgroundColor": undefined,
                                },
                                {
                                  "paddingHorizontal": 24,
                                },
                                {
                                  "backgroundColor": "#0B3EE3",
                                  "borderColor": "#FFFFFF",
                                  "borderRadius": 8,
                                  "borderWidth": 0,
                                  "height": 48,
                                },
                                {},
                              ]
                            }
                          >
                            <View
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "justifyContent": "center",
                                  },
                                  {
                                    "columnGap": 8,
                                  },
                                  false,
                                ]
                              }
                            >
                              <Text
                                accessibilityElementsHidden={true}
                                accessible={false}
                                allowFontScaling={true}
                                ellipsizeMode="tail"
                                importantForAccessibility="no-hide-descendants"
                                maxFontSizeMultiplier={1.5}
                                numberOfLines={1}
                                style={
                                  [
                                    {},
                                    {
                                      "color": "#0E0F13",
                                      "fontFamily": "Titillio",
                                      "fontSize": 16,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": undefined,
                                    },
                                    [
                                      {
                                        "textAlign": "auto",
                                      },
                                      {
                                        "color": "#FFFFFF",
                                      },
                                      {
                                        "color": undefined,
                                      },
                                    ],
                                  ]
                                }
                              >
                                Torna alla notifica
                              </Text>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "height": 16,
                            }
                          }
                        />
                        <View
                          style={
                            {
                              "alignSelf": "center",
                            }
                          }
                        >
                          <View
                            accessibilityLabel="Chiudi la notifica"
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "busy": false,
                                "checked": undefined,
                                "disabled": false,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            hitSlop={
                              {
                                "bottom": 14,
                                "left": 24,
                                "right": 24,
                                "top": 14,
                              }
                            }
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "alignSelf": "flex-start",
                              }
                            }
                            testID="secondary_button"
                          >
                            <View
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "borderCurve": "continuous",
                                    "elevation": 0,
                                    "flexDirection": "row",
                                    "justifyContent": "center",
                                    "overflow": "hidden",
                                    "textAlignVertical": "center",
                                  },
                                  false,
                                  {},
                                  {
                                    "paddingHorizontal": 0,
                                  },
                                  {
                                    "backgroundColor": "transparent",
                                    "borderColor": "#0B3EE3",
                                    "borderRadius": 8,
                                    "borderWidth": 0,
                                    "height": undefined,
                                  },
                                  {},
                                ]
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                    },
                                    {
                                      "columnGap": 8,
                                    },
                                    false,
                                  ]
                                }
                              >
                                <Text
                                  accessibilityElementsHidden={true}
                                  accessible={false}
                                  allowFontScaling={true}
                                  ellipsizeMode="tail"
                                  importantForAccessibility="no-hide-descendants"
                                  maxFontSizeMultiplier={1.5}
                                  numberOfLines={1}
                                  style={
                                    [
                                      {},
                                      {
                                        "color": "#0E0F13",
                                        "fontFamily": "Titillio",
                                        "fontSize": 16,
                                        "fontStyle": "normal",
                                        "fontWeight": "600",
                                        "lineHeight": 20,
                                      },
                                      [
                                        {
                                          "textAlign": "auto",
                                        },
                                        {
                                          "color": "#0B3EE3",
                                        },
                                        {
                                          "color": undefined,
                                        },
                                      ],
                                    ]
                                  }
                                >
                                  Chiudi la notifica
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "height": 24,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`BottomSheetContent should match snapshot when isDelegate='true' 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          [
            {
              "zIndex": 1,
            },
            false,
          ]
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                [
                  {
                    "flex": 1,
                    "shadowOffset": {
                      "height": 0.5,
                      "width": 0,
                    },
                    "shadowOpacity": 0.85,
                    "shadowRadius": 0,
                  },
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderBottomColor": "rgb(216, 216, 216)",
                    "shadowColor": "rgb(216, 216, 216)",
                  },
                  [
                    {},
                    false,
                  ],
                ]
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              [
                {
                  "height": 44,
                  "maxHeight": undefined,
                  "minHeight": undefined,
                  "opacity": undefined,
                  "transform": undefined,
                },
              ]
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    [
                      {
                        "fontSize": 17,
                        "fontWeight": "600",
                      },
                      {
                        "color": "rgb(28, 28, 30)",
                      },
                      undefined,
                    ]
                  }
                >
                  PN_ROUTES_MESSAGE_DETAILS
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "zIndex": undefined,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                [
                  {
                    "flex": 1,
                  },
                  undefined,
                  null,
                ]
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "display": "flex",
                              "flexDirection": "row",
                              "gap": 24,
                            }
                          }
                        >
                          <RNSVGSvgView
                            accessibilityElementsHidden={true}
                            accessibilityLabel=""
                            accessible={false}
                            align="xMidYMid"
                            bbHeight={36}
                            bbWidth={36}
                            color="#BBC2D6"
                            focusable={false}
                            height={36}
                            importantForAccessibility="no-hide-descendants"
                            meetOrSlice={0}
                            minX={0}
                            minY={0}
                            style={
                              [
                                {
                                  "backgroundColor": "transparent",
                                  "borderWidth": 0,
                                },
                                {
                                  "flex": 0,
                                  "height": 36,
                                  "width": 36,
                                },
                              ]
                            }
                            vbHeight={24}
                            vbWidth={24}
                            width={36}
                          >
                            <RNSVGGroup
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            >
                              <RNSVGPath
                                clipRule={0}
                                d="M0 3a3 3 0 0 1 3-3h5a3 3 0 0 1 3 3v5a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3V3Zm3-1a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H3ZM0 16a3 3 0 0 1 3-3h5a3 3 0 0 1 3 3v5a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3v-5Zm3-1a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1v-5a1 1 0 0 0-1-1H3ZM16 0a3 3 0 0 0-3 3v5a3 3 0 0 0 3 3h5a3 3 0 0 0 3-3V3a3 3 0 0 0-3-3h-5Zm-1 3a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1h-5a1 1 0 0 1-1-1V3Zm-1.5 13.681a.5.5 0 0 1-.5-.5V13.5a.5.5 0 0 1 .5-.5h2.637a.5.5 0 0 1 .5.5v3.181H13.5Zm6.819 0h-3.682v3.637H13.5a.5.5 0 0 0-.5.5V23.5a.5.5 0 0 0 .5.5h3.137v-3.681h3.681V24H23.5a.5.5 0 0 0 .5-.5v-3.181h-3.681v-3.637Zm0 0V13.5a.5.5 0 0 1 .5-.5H23.5a.5.5 0 0 1 .5.5v3.181h-3.681ZM5 4a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1h1a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1H5ZM4 18a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-1ZM18 4a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1h1a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-1Z"
                                fill={
                                  {
                                    "type": 2,
                                  }
                                }
                                fillRule={0}
                                propList={
                                  [
                                    "fill",
                                    "fillRule",
                                  ]
                                }
                              />
                            </RNSVGGroup>
                          </RNSVGSvgView>
                          <View
                            style={
                              {
                                "display": "flex",
                                "flexDirection": "column",
                                "flexShrink": 1,
                                "gap": 6,
                              }
                            }
                          >
                            <Text
                              allowFontScaling={true}
                              dynamicTypeRamp="body"
                              maxFontSizeMultiplier={1.5}
                              style={
                                [
                                  {},
                                  {
                                    "color": "#555C70",
                                    "fontFamily": "Titillio",
                                    "fontSize": 16,
                                    "fontStyle": "normal",
                                    "fontWeight": "400",
                                    "lineHeight": 24,
                                  },
                                ]
                              }
                              testID="infoScreenBody"
                            >
                              Conserva il codice QR, ti servirà per rileggere la notifica in app
                            </Text>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "height": 24,
                            }
                          }
                        />
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "display": "flex",
                              "flexDirection": "row",
                              "gap": 24,
                            }
                          }
                        >
                          <RNSVGSvgView
                            accessibilityElementsHidden={true}
                            accessibilityLabel=""
                            accessible={false}
                            align="xMidYMid"
                            bbHeight={36}
                            bbWidth={36}
                            color="#BBC2D6"
                            focusable={false}
                            height={36}
                            importantForAccessibility="no-hide-descendants"
                            meetOrSlice={0}
                            minX={0}
                            minY={0}
                            style={
                              [
                                {
                                  "backgroundColor": "transparent",
                                  "borderWidth": 0,
                                },
                                {
                                  "flex": 0,
                                  "height": 36,
                                  "width": 36,
                                },
                              ]
                            }
                            vbHeight={24}
                            vbWidth={24}
                            width={36}
                          >
                            <RNSVGGroup
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            >
                              <RNSVGPath
                                clipRule={0}
                                d="M0 5c0-2.76142 2.23858-5 5-5h3c.55229 0 1 .44771 1 1 0 .55228-.44771 1-1 1H5C3.34315 2 2 3.34315 2 5v3c0 .55229-.44772 1-1 1-.55229 0-1-.44771-1-1V5Zm19-5c2.7614 0 5 2.23858 5 5v3c0 .55229-.4477 1-1 1s-1-.44771-1-1V5c0-1.65685-1.3431-3-3-3h-3c-.5523 0-1-.44772-1-1 0-.55229.4477-1 1-1h3Zm0 24c2.7614 0 5-2.2386 5-5v-3c0-.5523-.4477-1-1-1s-1 .4477-1 1v3c0 1.6569-1.3431 3-3 3h-3c-.5523 0-1 .4477-1 1s.4477 1 1 1h3ZM5 24c-2.76142 0-5-2.2386-5-5v-3c0-.5523.44771-1 1-1 .55228 0 1 .4477 1 1v3c0 1.6569 1.34315 3 3 3h3c.55229 0 1 .4477 1 1s-.44771 1-1 1H5Zm-1-9c0-1.1046.89543-2 2-2h3c1.1046 0 2 .8954 2 2v3c0 1.1046-.8954 2-2 2H6c-1.10457 0-2-.8954-2-2v-3Zm2.25 0c-.13807 0-.25.1119-.25.25v2.5c0 .1381.11193.25.25.25h2.5c.13807 0 .25-.1119.25-.25v-2.5c0-.1381-.11193-.25-.25-.25h-2.5ZM6 4c-1.10457 0-2 .89543-2 2v3c0 1.1046.89543 2 2 2h3c1.1046 0 2-.8954 2-2V6c0-1.10457-.8954-2-2-2H6Zm2.75 2c.13807 0 .25.11193.25.25v2.5c0 .13807-.11193.25-.25.25h-2.5C6.11193 9 6 8.88807 6 8.75v-2.5c0-.13807.11193-.25.25-.25h2.5ZM13 6c0-1.10457.8954-2 2-2h3c1.1046 0 2 .89543 2 2v3c0 1.1046-.8954 2-2 2h-3c-1.1046 0-2-.8954-2-2V6Zm2.25 0c-.1381 0-.25.11193-.25.25v2.5c0 .13807.1119.25.25.25h2.5c.1381 0 .25-.11193.25-.25v-2.5c0-.13807-.1119-.25-.25-.25h-2.5ZM20 15c0-.5523-.4477-1-1-1s-1 .4477-1 1v2.75c0 .1381-.1119.25-.25.25H15c-.5523 0-1 .4477-1 1s.4477 1 1 1h3c1.1046 0 2-.8954 2-2v-3Zm-5-1c.5523 0 1 .4477 1 1s-.4477 1-1 1-1-.4477-1-1 .4477-1 1-1Z"
                                fill={
                                  {
                                    "type": 2,
                                  }
                                }
                                fillRule={0}
                                propList={
                                  [
                                    "fill",
                                    "fillRule",
                                  ]
                                }
                              />
                            </RNSVGGroup>
                          </RNSVGSvgView>
                          <View
                            style={
                              {
                                "display": "flex",
                                "flexDirection": "column",
                                "flexShrink": 1,
                                "gap": 6,
                              }
                            }
                          >
                            <Text
                              allowFontScaling={true}
                              dynamicTypeRamp="body"
                              maxFontSizeMultiplier={1.5}
                              style={
                                [
                                  {},
                                  {
                                    "color": "#555C70",
                                    "fontFamily": "Titillio",
                                    "fontSize": 16,
                                    "fontStyle": "normal",
                                    "fontWeight": "400",
                                    "lineHeight": 24,
                                  },
                                ]
                              }
                              testID="infoScreenBody"
                            >
                              Puoi inquadrarlo oppure caricare una sua foto su IO
                            </Text>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "height": 24,
                            }
                          }
                        />
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "display": "flex",
                              "flexDirection": "row",
                              "gap": 24,
                            }
                          }
                        >
                          <RNSVGSvgView
                            accessibilityElementsHidden={true}
                            accessibilityLabel=""
                            accessible={false}
                            align="xMidYMid"
                            bbHeight={36}
                            bbWidth={36}
                            color="#BBC2D6"
                            focusable={false}
                            height={36}
                            importantForAccessibility="no-hide-descendants"
                            meetOrSlice={0}
                            minX={0}
                            minY={0}
                            style={
                              [
                                {
                                  "backgroundColor": "transparent",
                                  "borderWidth": 0,
                                },
                                {
                                  "flex": 0,
                                  "height": 36,
                                  "width": 36,
                                },
                              ]
                            }
                            vbHeight={24}
                            vbWidth={24}
                            width={36}
                          >
                            <RNSVGGroup
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            >
                              <RNSVGPath
                                d="M12 0a12 12 0 1 0 12 12A12.013 12.013 0 0 0 12 0Zm8.647 7h-3.221a19.674 19.674 0 0 0-2.821-4.644A10.031 10.031 0 0 1 20.647 7ZM16.5 12a10.21 10.21 0 0 1-.476 3H7.976a10.211 10.211 0 0 1-.476-3 10.21 10.21 0 0 1 .476-3h8.048c.307.97.468 1.982.476 3Zm-7.722 5h6.444A19.615 19.615 0 0 1 12 21.588 19.572 19.572 0 0 1 8.778 17Zm0-10A19.615 19.615 0 0 1 12 2.412 19.57 19.57 0 0 1 15.222 7H8.778ZM9.4 2.356A19.676 19.676 0 0 0 6.574 7H3.353A10.03 10.03 0 0 1 9.4 2.356ZM2.461 9H5.9c-.26.98-.394 1.987-.4 3 .006 1.013.14 2.02.4 3H2.461a9.992 9.992 0 0 1 0-6Zm.892 8h3.221A19.676 19.676 0 0 0 9.4 21.644 10.031 10.031 0 0 1 3.353 17Zm11.252 4.644c1.15-1.41 2.1-2.973 2.821-4.644h3.221a10.031 10.031 0 0 1-6.042 4.644ZM21.539 15H18.1c.26-.98.394-1.987.4-3a12.02 12.02 0 0 0-.4-3h3.437a9.991 9.991 0 0 1 0 6h.002Z"
                                fill={
                                  {
                                    "type": 2,
                                  }
                                }
                                propList={
                                  [
                                    "fill",
                                  ]
                                }
                              />
                            </RNSVGGroup>
                          </RNSVGSvgView>
                          <View
                            style={
                              {
                                "display": "flex",
                                "flexDirection": "column",
                                "flexShrink": 1,
                                "gap": 6,
                              }
                            }
                          >
                            <Text
                              allowFontScaling={true}
                              dynamicTypeRamp="footnote"
                              maxFontSizeMultiplier={1.5}
                              style={
                                [
                                  {},
                                  {
                                    "color": "#555C70",
                                    "fontFamily": "Titillio",
                                    "fontSize": 14,
                                    "fontStyle": "normal",
                                    "fontWeight": "400",
                                    "lineHeight": 21,
                                  },
                                ]
                              }
                              testID="body_mandate"
                            >
                              Tutte le tue notifiche e quelle per cui hai una delega sono disponibili sul sito di SEND - Notifiche Digitali
                            </Text>
                            <View
                              accessibilityRole="link"
                              accessibilityState={
                                {
                                  "busy": undefined,
                                  "checked": undefined,
                                  "disabled": undefined,
                                  "expanded": undefined,
                                  "selected": undefined,
                                }
                              }
                              accessibilityValue={
                                {
                                  "max": undefined,
                                  "min": undefined,
                                  "now": undefined,
                                  "text": undefined,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                            >
                              <Text
                                accessibilityRole="link"
                                allowFontScaling={true}
                                dynamicTypeRamp="footnote"
                                maxFontSizeMultiplier={1.5}
                                style={
                                  [
                                    {
                                      "textDecorationLine": "underline",
                                    },
                                    {
                                      "color": "#0B3EE3",
                                      "fontFamily": "Titillio",
                                      "fontSize": 14,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": 21,
                                    },
                                  ]
                                }
                                testID="link"
                              >
                                Vai sul sito di SEND
                              </Text>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "height": 24,
                            }
                          }
                        />
                        <View
                          accessibilityLabel="Torna alla notifica"
                          accessibilityRole="button"
                          accessibilityState={
                            {
                              "busy": false,
                              "checked": undefined,
                              "disabled": false,
                              "expanded": undefined,
                              "selected": undefined,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            {
                              "alignSelf": "auto",
                              "flexShrink": 1,
                            }
                          }
                          testID="primary_button"
                        >
                          <View
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "borderCurve": "continuous",
                                  "elevation": 0,
                                  "flexDirection": "row",
                                  "justifyContent": "center",
                                  "overflow": "hidden",
                                  "textAlignVertical": "center",
                                },
                                false,
                                {
                                  "backgroundColor": undefined,
                                },
                                {
                                  "paddingHorizontal": 24,
                                },
                                {
                                  "backgroundColor": "#0B3EE3",
                                  "borderColor": "#FFFFFF",
                                  "borderRadius": 8,
                                  "borderWidth": 0,
                                  "height": 48,
                                },
                                {},
                              ]
                            }
                          >
                            <View
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "justifyContent": "center",
                                  },
                                  {
                                    "columnGap": 8,
                                  },
                                  false,
                                ]
                              }
                            >
                              <Text
                                accessibilityElementsHidden={true}
                                accessible={false}
                                allowFontScaling={true}
                                ellipsizeMode="tail"
                                importantForAccessibility="no-hide-descendants"
                                maxFontSizeMultiplier={1.5}
                                numberOfLines={1}
                                style={
                                  [
                                    {},
                                    {
                                      "color": "#0E0F13",
                                      "fontFamily": "Titillio",
                                      "fontSize": 16,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": undefined,
                                    },
                                    [
                                      {
                                        "textAlign": "auto",
                                      },
                                      {
                                        "color": "#FFFFFF",
                                      },
                                      {
                                        "color": undefined,
                                      },
                                    ],
                                  ]
                                }
                              >
                                Torna alla notifica
                              </Text>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "height": 16,
                            }
                          }
                        />
                        <View
                          style={
                            {
                              "alignSelf": "center",
                            }
                          }
                        >
                          <View
                            accessibilityLabel="Chiudi la notifica"
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "busy": false,
                                "checked": undefined,
                                "disabled": false,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            hitSlop={
                              {
                                "bottom": 14,
                                "left": 24,
                                "right": 24,
                                "top": 14,
                              }
                            }
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "alignSelf": "flex-start",
                              }
                            }
                            testID="secondary_button"
                          >
                            <View
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "borderCurve": "continuous",
                                    "elevation": 0,
                                    "flexDirection": "row",
                                    "justifyContent": "center",
                                    "overflow": "hidden",
                                    "textAlignVertical": "center",
                                  },
                                  false,
                                  {},
                                  {
                                    "paddingHorizontal": 0,
                                  },
                                  {
                                    "backgroundColor": "transparent",
                                    "borderColor": "#0B3EE3",
                                    "borderRadius": 8,
                                    "borderWidth": 0,
                                    "height": undefined,
                                  },
                                  {},
                                ]
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                    },
                                    {
                                      "columnGap": 8,
                                    },
                                    false,
                                  ]
                                }
                              >
                                <Text
                                  accessibilityElementsHidden={true}
                                  accessible={false}
                                  allowFontScaling={true}
                                  ellipsizeMode="tail"
                                  importantForAccessibility="no-hide-descendants"
                                  maxFontSizeMultiplier={1.5}
                                  numberOfLines={1}
                                  style={
                                    [
                                      {},
                                      {
                                        "color": "#0E0F13",
                                        "fontFamily": "Titillio",
                                        "fontSize": 16,
                                        "fontStyle": "normal",
                                        "fontWeight": "600",
                                        "lineHeight": 20,
                                      },
                                      [
                                        {
                                          "textAlign": "auto",
                                        },
                                        {
                                          "color": "#0B3EE3",
                                        },
                                        {
                                          "color": undefined,
                                        },
                                      ],
                                    ]
                                  }
                                >
                                  Chiudi la notifica
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "height": 24,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
